<resources>
    <string name="app_name">버스스로</string>

    <!-- manifests (label for screen reader feature) -->
    <string name="empty_label">""</string>
    <string name="main_activity_label">홈 화면입니다.</string>
    <string name="settings_activity_label">환경 설정 화면입니다.</string>

    <!-- activity_launch_screen -->
    <string name="iv_launch_logo">버스스로 로고 이미지</string>
    <string name="txt_launch_desc">시각장애인을 위한 버스 원스톱 솔루션</string>

    <!-- activity_on_boarding -->
    <string name="txt_on_boarding_next">다음</string>

    <!-- fragment_first -->
    <string name="txt_fragment_first">서울시 버스정보\n<b>이제는 간편하게 확인</b></string>

    <!-- fragment_second -->
    <string name="txt_fragment_second">버스 위치가 궁금하면\n<b>카메라로 버스 차체 인식</b></string>

    <!-- fragment_third -->
    <string name="txt_fragment_third">하차벨 위치는\n<b>카메라로 하차벨 인식</b></string>

    <!-- activity_clause -->
    <string name="txt_clause_head">약관동의</string>
    <string name="txt_clause_head_desc">버스스로 이용을 위해 아래 약관에 동의해 주세요</string>
    <string name="cb_clause_first">[필수] 서비스 이용약관</string>
    <string name="cb_clause_second">[필수] 개인정보처리방침</string>
    <string name="cb_clause_third">앱 사용 기록 추적</string>
    <string name="cb_clause_desc_1">서비스를 이용하기 위해서는 위에 해당하는\n필수 권한들을 허용해주셔야 사용이 가능합니다.</string>
    <string name="cb_clause_desc_2"><![CDATA[접근 권한 변경 방법\n휴대폰 설정 > 앱 > 버스스로]]></string>
    <string name="cb_clause_select_all">전체 동의하기</string>
    <string name="txt_clause_start">앱 시작하기</string>

    <!-- activity_main -->
    <string name="main_first_txt">버스 탑승 도우미</string>
    <string name="main_second_txt">하차벨 위치</string>
    <string name="main_third_txt">버스 탑승 기록</string>
    <string name="main_setting_txt">설정</string>

    <!-- activity_bus_stop -->
    <string name="txt_nearby_bus_stop">버스 정류장</string>
    <string name="edt_nearby_bus_stop">다른 정류장 검색 …</string>

    <!-- activity_search -->
    <string name="txt_search_title">버스 정류장 검색</string>
    <string name="txt_search_desc">최근 검색어</string>
    <string name="txt_search_delete_all">전체 삭제</string>
    <string name="txt_search_placeholder">최근 검색어가 없습니다.</string>

    <!-- activity_bus_list -->
    <string name="bus_list_info_txt">번 버스로 도착을 안내합니다.</string>

    <!-- activity_history -->
    <string name="txt_history">버스 탑승 기록</string>
    <string name="txt_history_description">이번 달 버스 이용은 0번 입니다.</string>
    <string name="txt_history_off_desc">지금 버스스로를 이용해보세요</string>

    <string-array name="history_category">
        <item>히스토리</item>
        <item>즐겨찾기</item>
    </string-array>

    <!-- activity_settings -->
    <string name="txt_setting_title">설정</string>
    <string name="iv_setting_back_cd">뒤로가기</string>
    <string name="txt_setting_noti_desc">공지사항</string>
    <string name="iv_setting_noti_detail_cd">공지사항으로 이동하기</string>
    <string name="txt_setting_inquiry_desc">문의하기</string>
    <string name="iv_setting_inquiry_detail_cd">문의사항으로 이동하기</string>
    <string name="txt_setting_cl_desc">약관동의확인</string>
    <string name="iv_setting_cl_detail_desc">약관동의확인으로 이동하기</string>
    <string name="txt_setting_os_desc">오픈소스 및 라이센스</string>
    <string name="iv_setting_os_detail_cd">오픈소스 및 라이센스로 이동하기</string>
    <string name="txt_setting_tts">음성안내</string>
    <string name="txt_setting_version">버전정보 1.0.0</string>
    <string name="email">otu1650@gmail.com</string>

    <string name="help"><u><b>문의하기</b></u></string>
    <string name="title_activity_info">InfoActivity</string>

    <!-- activity_info -->
    <string-array name="info_list">
        <item>버스 탑승 도우미 기능</item>
        <item>하차벨 위치 기능</item>
        <item>버스 탑승 기록 기능</item>
    </string-array>

    <string-array name="info_first_list">
        <item>버스 정류장 화면</item>
        <item>경유 버스 노선 화면</item>
        <item>검색 화면</item>
        <item>탑승 방식 선택 화면</item>
        <item>전광판 기능</item>
        <item>카메라 기능</item>
    </string-array>

    <string-array name="info_second_list">
        <item>하차벨 화면</item>
    </string-array>

    <string-array name="info_third_list">
        <item>버스탑승기록 화면</item>
    </string-array>

    <!-- activity_detail_info -->
    <string name="help_2"><u>설명이 부족하거나 사용이 어려우시면 클릭해주세요.</u></string>


</resources>