<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.youreye.bussro.feature.search.SearchActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature.search.SearchActivity"
        android:background="@color/background">

        <!-- 뒤로가기 -->
        <ImageButton
            android:id="@+id/ib_search_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_baseline_keyboard_backspace_24"
            app:layout_constraintBottom_toBottomOf="@id/txt_search_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_search_title" />

        <!-- 타이틀 -->
        <TextView
            android:id="@+id/txt_search_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_search_title"
            android:textColor="@color/yellow"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp" />

        <!-- 텍스트 검색 -->
        <EditText
            android:id="@+id/edt_search"
            android:hint="@string/edt_nearby_bus_stop"
            android:textSize="18dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@drawable/bg_edt"
            android:singleLine="true"
            android:ems="20"
            android:imeOptions="actionSearch"
            app:layout_constraintTop_toBottomOf="@id/txt_search_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_search_voice"
            android:layout_margin="16dp" />

        <!-- 음성 검색 -->
        <ImageView
            android:id="@+id/iv_search_voice"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:focusable="true"
            android:padding="2dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_keyboard_voice_24"
            app:layout_constraintStart_toEndOf="@id/edt_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/edt_search"
            app:layout_constraintBottom_toBottomOf="@id/edt_search" />

        <!-- 안내문구 -->
        <TextView
            android:id="@+id/txt_search_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txt_search_desc"
            android:textSize="18dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/edt_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rv_search"/>

        <!-- 전체 삭제 -->
        <TextView
            android:id="@+id/txt_search_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/txt_search_delete_all"
            android:textColor="@color/light_gray"
            android:textSize="16dp"
            app:layout_constraintTop_toTopOf="@id/txt_search_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/txt_search_desc"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/txt_search_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/rv_list_item" />

        <!-- placeholder -->
        <ImageView
            android:id="@+id/iv_search_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_search_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_search_placeholder"
            app:layout_constraintStart_toStartOf="@id/iv_search_placeholder"
            app:layout_constraintEnd_toEndOf="@id/iv_search_placeholder"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:text="@string/txt_search_placeholder"
            android:gravity="center"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>